--- a/Lending_Club_Credit_Loss_Forecasting.ipynb
+++ b/Lending_Club_Credit_Loss_Forecasting.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPtvZvTfr34ZpcWPiABaopM",
+      "authorship_tag": "ABX9TyOHhwylsh3f/SCSPElaODXE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -419,7 +419,7 @@
     {
       "cell_type": "code",
       "source": [
-        "cph.fit(rossi, 'week', 'arrest')\n",
+        "cph.fit(rossi, duration_col='week', event_col='arrest')\n",
         "cph.print_summary()"
       ],
       "metadata": {
@@ -13847,7 +13847,7 @@
         "\n",
         "PD: probability of default, which is calculated by our model.\n",
         "\n",
-        "LGD: loss given default, is the amount of the loan that is deemed unrecoverable and is represented as a number between 0 (no loss) and 1 (100% of the loan is a loss). We will use an assumed LGD of 1 (a LGD of 1 is a conservative assumption given the unsecured nature of the loans)\n",
+        "LGD: loss given default, is the amount of the loan that is deemed unrecoverable and is represented as a number between 0 (no loss) and 1 (100% of the loan is a loss). We will use an assumed LGD of 1 (a LGD of 1 is a conservative assumption given the unsecured nature of the loans).\n",
         "\n",
         "EAD: exposure at default, is the total value a lender is exposed to when a loan defaults. In this project, I will use the following equation to calculate it:\n",
         "  \n",
@@ -13869,16 +13869,6 @@
       },
       "execution_count": 147,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "X_test_undersampling_unscaled = scaler.inverse_transform(X_test_undersampling)\n",
-        "X_test_undersampling_unscaled"
-      ],
-      "metadata": {
-        "id": "nUGxIv8RJHc8"
-      }
     },
     {
       "cell_type": "code",
@@ -15120,12 +15110,43 @@
     {
       "cell_type": "code",
       "source": [
+        "y_test_undersampling.head()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xDTCWonByTrm",
+        "outputId": "973f1ced-73e6-45ba-f1ed-b312b9b827de"
+      },
+      "execution_count": 185,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1348824    0\n",
+              "1802011    0\n",
+              "1231957    0\n",
+              "1641941    0\n",
+              "1143375    1\n",
+              "Name: loan_status, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 185
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "loss_df = pd.DataFrame(lr_preds[:, 1], columns=['lr_PD'])\n",
         "loss_df['rf_PD'] = rf_preds[:, 1]\n",
         "loss_df['xgb_PD'] = xgb_preds[:, 1]\n",
         "loss_df['LGD'] = 1\n",
         "loss_df.index = X_test_undersampling_unscaled.index\n",
-        "loss_df['EAD'] = (X_test_undersampling_unscaled['loan_amnt'] - X_test_undersampling_unscaled['total_rec_prncp'])\n",
+        "loss_df['EAD'] = X_test_undersampling_unscaled['loan_amnt'] - X_test_undersampling_unscaled['total_rec_prncp']\n",
         "loss_df['loan_amnt'] = X_test_undersampling_unscaled['loan_amnt']\n",
         "loss_df.head()"
       ],
