--- a/Lending_Club_Credit_Loss_Forecasting.ipynb
+++ b/Lending_Club_Credit_Loss_Forecasting.ipynb
@@ -6,8 +6,7 @@
       "name": "Lending Club - Credit Loss Forecasting.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOV0+MFjxOZsLkNW7jIj/t/",
+      "authorship_tag": "ABX9TyMMT7c11Y2vW8BTuJ5JAQw2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15589,10 +15588,9 @@
       "source": [
         "The algorithm we will use here:\n",
         "\n",
-        "\n",
+        "*   Logistic Regression\n",
         "*   Random Forest\n",
         "*   XGBoost\n",
-        "*   ANN\n",
         "\n"
       ],
       "metadata": {
